--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,4 @@ env:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: https://eureka-server.up.railway.app/eureka
